--- a/c00/ex00/Makefile
+++ b/c00/ex00/Makefile
@@ -3,7 +3,7 @@ NAME = megaphone
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 all :
-	c++ $(FLAGS) megaphone.cpp -o $(NAME)
+	g++ $(FLAGS) megaphone.cpp -o $(NAME)
 
 clean :
 	rm -rf $(NAME)
