--- a/c00/ex01/Makefile
+++ b/c00/ex01/Makefile
@@ -1,11 +1,11 @@
+
 NAME = PhoneBook
 
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 all :
-	c++ $(FLAGS) phonebook.cpp -o $(NAME)
+	c++ $(FLAGS) contact.cpp phonebook.cpp main.cpp -o $(NAME)
 
 clean :
 	rm -rf $(NAME)
-
 
