--- a/c03/ex02/Makefile
+++ b/c03/ex02/Makefile
@@ -2,7 +2,7 @@
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 all :
-	c++ $(FLAGS) main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.hpp
+	c++ $(FLAGS) main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
 
 clean :
 	rm -rf ./a.out
